Possible Dark Mode Fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,8 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    background-color: #fff;
+    color: #000;
 }
 
 .dark {
